# ChangeLog for dev-perl/DateTime
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime/ChangeLog,v 1.82 2009/05/06 14:44:37 tove Exp $

  06 May 2009; Torsten Veller <tove@gentoo.org> -DateTime-0.45.01.ebuild,
  -DateTime-0.46.ebuild:
  Cleanup

*DateTime-0.49 (05 May 2009)

  05 May 2009; Torsten Veller <tove@gentoo.org> +DateTime-0.49.ebuild:
  Version bump

  04 May 2009; Raúl Porcel <armin76@gentoo.org> DateTime-0.47.ebuild:
  alpha/ia64 stable wrt #268167

  03 May 2009; Markus Meier <maekke@gentoo.org> DateTime-0.47.ebuild:
  amd64 stable, bug #268167

  03 May 2009; Brent Baude <ranger@gentoo.org> DateTime-0.47.ebuild:
  stable ppc64, bug 268167

  02 May 2009; Ferris McCormick <fmccor@gentoo.org> DateTime-0.47.ebuild:
  Sparc stable, Bug #268167.

  02 May 2009; nixnut <nixnut@gentoo.org> DateTime-0.47.ebuild:
  ppc stable #268167

  02 May 2009; Torsten Veller <tove@gentoo.org> DateTime-0.47.ebuild:
  Stable on x86 (#268167)

*DateTime-0.47 (02 Mar 2009)

  02 Mar 2009; Robin H. Johnson <robbat2@gentoo.org> +DateTime-0.47.ebuild:
  Version bump via perl-bump experimental tool.

*DateTime-0.46 (01 Mar 2009)

  01 Mar 2009; Torsten Veller <tove@gentoo.org> +DateTime-0.46.ebuild:
  Version bump. Fix LICENSE

  30 Jan 2009; Torsten Veller <tove@gentoo.org> metadata.xml,
  -DateTime-0.39.ebuild:
  Cleanup

  11 Jan 2009; Markus Meier <maekke@gentoo.org> DateTime-0.45.01.ebuild:
  amd64 stable, bug #254143

  09 Jan 2009; Joseph Jezak <josejx@gentoo.org> DateTime-0.45.01.ebuild:
  Marked ppc stable for bug #254143.

  08 Jan 2009; Brent Baude <ranger@gentoo.org> DateTime-0.45.01.ebuild:
  Marking DateTime-0.45.01 ppc64 for bug 254143

  07 Jan 2009; Raúl Porcel <armin76@gentoo.org> DateTime-0.45.01.ebuild:
  alpha/ia64/x86 stable wrt #254143

  07 Jan 2009; Ferris McCormick <fmccor@gentoo.org> DateTime-0.45.01.ebuild:
  Sparc stable, part of Bug #254143.
