@@ -1,0 +1,27 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime/DateTime-0.50.ebuild,v 1.1 2009/05/12 08:27:09 tove Exp $
+
+EAPI=2
+
+#inherit versionator
+#MY_P=${PN}-$(delete_version_separator 2)
+#S=${WORKDIR}/${MY_P}
+MODULE_AUTHOR=DROLSKY
+inherit perl-module
+
+DESCRIPTION="A date and time object"
+
+SLOT="0"
+KEYWORDS="~x86-freebsd ~amd64-linux ~x86-linux ~x86-macos ~x86-solaris"
+IUSE="test"
+
+RDEPEND=">=dev-perl/Params-Validate-0.76
+	>=virtual/perl-Time-Local-1.04
+	>=dev-perl/DateTime-TimeZone-0.59
+	>=dev-perl/DateTime-Locale-0.41"
+DEPEND="${RDEPEND}
+	test? ( dev-perl/Test-Pod
+		dev-perl/Test-Pod-Coverage )"
+
+SRC_TEST="do"
