@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/DateTime
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime/ChangeLog,v 1.82 2009/05/06 14:44:37 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime/ChangeLog,v 1.83 2009/05/12 08:27:09 tove Exp $
+
+*DateTime-0.50 (12 May 2009)
+
+  12 May 2009; Torsten Veller <tove@gentoo.org> +DateTime-0.50.ebuild:
+  Version bump
 
   06 May 2009; Torsten Veller <tove@gentoo.org> -DateTime-0.45.01.ebuild,
   -DateTime-0.46.ebuild:
